<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragments_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataVisualization">

    <Button
        android:id="@+id/LocalData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="48dp"
        android:onClick="LocalData_Click"
        android:text="LocalData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/WeatherAPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="48dp"
        android:onClick="WeatherAPI_Click"
        android:text="WeatherAPI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LocalData" />
</androidx.constraintlayout.widget.ConstraintLayout>